--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-# VITE_REACT_APP_BACKEND_URL=http://localhost:3000
-VITE_REACT_APP_BACKEND_URL=http://10.10.20.181:3000
+VITE_REACT_APP_BACKEND_URL=http://localhost:3000
+# VITE_REACT_APP_BACKEND_URL=http://192.168.1.86:3000
 VITE_REACT_APP_SOCKET_URL=http://localhost:3000
